[package]
name = "routing"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>"]

[dependencies]
time = "0.1.12"
petgraph = {version = "0.4.10", features = ["serde-1"]}
rand = "0.3.*"
nalgebra = {version = "0.13.1", features = ["serde-serialize"]}
spade = "1.2.0"
num-traits = "0.1.40"
typenum = "1.9.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
clippy = {version = "*", optional = true}

[profile.dev]
opt-level = 1

[profile.release]
debug = true
